--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
             "Kanchee, I am so proud of your journey!",
             "Every high note you hit makes my heart skip.",
             "Timro swor, mero sansar. ❤️",
-            "To the most talented singer in Nepal...",
+            "To the most talented upcomming singer in Nepal...",
             "Your smile is as beautiful as your songs.",
             "I'll always be in the front row cheering for you.",
             "Kanchee, you are my favorite melody.",
             "Never stop singing, the world needs your voice.",
-            "I love you more than all the stars in the sky."
+            "you means more than all the stars in the sky."
         ];
 
         let index = 0;
@@ -155,3 +155,4 @@
     </script>
 </body>
 </html>
+
