--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <div class="message-container">
         <h1 id="love-text">Tap to begin, Kanchee</h1>
-        <div class="singer-tag">Rasuka • Nepal's Star</div>
+        <div class="singer-tag">Rasuka • AKA Kanchee</div>
     </div>
 
     <p class="instruction">Tap anywhere for a surprise</p>
@@ -155,4 +155,5 @@
     </script>
 </body>
 </html>
+
 
